--- a/src/views/inscriptions/plTypes.ejs
+++ b/src/views/inscriptions/plTypes.ejs
@@ -62,6 +62,9 @@
         <button type="submit" class="btn-std w-670 max-w-90p pad-11-0" id="typeButton">
             CONTINUAR
         </button>
+        <button type="button" id="backButton" class="btn-std w-670 max-w-90p pad-11-0" onclick="location.href='/inscripciones'">
+            ATRÁS
+        </button>
     </div>
 
 </form>
