--- a/src/views/partials/contactPopup.ejs
+++ b/src/views/partials/contactPopup.ejs
@@ -1,4 +1,4 @@
-<div class="fc-blue txt-u ta-c pointer ts" id="viewContact">¿Necesitas ayuda?</div>
+<div class="fc-blue txt-u ta-c pointer ts w-fc m-a" id="viewContact">¿Necesitas ayuda?</div>
 
 <div class="popup pp-std" id="conpp">
     
