--- a/src/views/inscriptions/selectCourse.ejs
+++ b/src/views/inscriptions/selectCourse.ejs
@@ -12,6 +12,9 @@
         <% coursesToShow.forEach(c => { %>
             <button type="submit" name="courseButton" value="<%= c.alias %>" class="btn-std fs-16 w-600 max-w-90p pad-17-0"><%= c.courseName.toUpperCase() %></button> 
         <% }) %>
+        <button type="button" id="backButton" class="mt-50 btn-std fs-16 w-600 max-w-90p pad-17-0"  onclick="location.href='/inscripciones'">
+            VOLVER AL MENÚ INICIAL
+        </button>
     </div>
 </form>
 
