--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,8 +71,24 @@ a{
     justify-content: center;
 }
 
+.jc-sb{
+    justify-content:space-between;
+}
+
+.jc-fe{
+    justify-content:flex-end;
+}
+
+.jc-fs{
+    justify-content:flex-start;
+}
+
 .ai-c{
     align-items: center;
+}
+
+.cg-3{
+    column-gap: 3px;
 }
 
 .cg-5{
