--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -34,6 +34,9 @@
     <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/checkout.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/confirmation.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/personalData.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/exams/exam.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/exams/examAnswers.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/exams/pendingExams.css?v=<%= Date.now() %>">
                       
 
     <!---Fonts-->
