--- a/src/views/inscriptions/checkout.ejs
+++ b/src/views/inscriptions/checkout.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/head') %>
 <%- include('../partials/header') %>
 
-<div class="fs-19 fw-b ta-c mt-20_0 mb-25">CONFIRMAR INSCRIPCIÓN</div>
+<div class="fs-19 fw-b ta-c mt-20_5- mb-25">CONFIRMAR INSCRIPCIÓN</div>
 
 <div class="checkout-info mt-6-">
     <b>VALOR A ABONAR: </b>
