--- a/src/views/inscriptions/personalDataCompanies.ejs
+++ b/src/views/inscriptions/personalDataCompanies.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/head') %>
 <%- include('../partials/header') %>
 
-<div class="fs-19 fw-b ta-c mt-10 mb-10"><%= title.toUpperCase() + ' - Alumnos' %></div>
+<div class="fs-19 fw-b ta-c mt-15_10- mb-20"><%= title.toUpperCase() + ' - Alumnos' %></div>
 <div class="fs-17 ta-c mb-15"><%= company.toUpperCase() + ' - Comisión ' + commission %></div>
 
 <div class="fs-13 fw-b mb-5 fc-error ta-c mb-15 mt-2- not-visible" id="continueError">Debe ingresar al menos un alumno</div>
