--- a/public/css/margins.css
+++ b/public/css/margins.css
@@ -49,7 +49,16 @@
 .mt-10{
     margin-top:10px
 }
+.mt-10_0{
+    margin-top:10px
+}
 .mt-15{
+    margin-top:15px
+}
+.mt-15_10-{
+    margin-top:15px
+}
+.mt-15_0{
     margin-top:15px
 }
 .mt-17{
@@ -59,6 +68,9 @@
     margin-top:19px
 }
 .mt-20{
+    margin-top:20px
+}
+.mt-20_5-{
     margin-top:20px
 }
 .mt-20_0{
@@ -175,6 +187,9 @@
 .mb-20{
     margin-bottom:20px
 }
+.mb-20_5-{
+    margin-bottom:20px
+}
 .mb-20_10{
     margin-bottom:20px
 }
@@ -236,14 +251,23 @@
     .mt-35{
         margin-top: 25px;
     }
+    .mt-10_0{
+        margin-top:0px
+    }
     .mt-20-10{
         margin-top: 10px;
     }
-    .mt-20_0{
-        margin-top: 0px;
+    .mt-10_0{
+        margin-top:10px
+    }
+    .mt-15_10-{
+        margin-top:-10px
     }
     .mt-20_15{
         margin-top: 15px;
+    }
+    .mt-20_5-{
+        margin-top: -5px;
     }
     .mt-25--5{
         margin-top: -5px;
