--- a/src/views/admin/asyncStudents/asyncStudents.ejs
+++ b/src/views/admin/asyncStudents/asyncStudents.ejs
@@ -41,7 +41,7 @@
             <th class="th pad-6-0 w-90">CURSO</th>
             <th class="th pad-6-0 w-100">COMISIÓN</th>
             <th class="th pad-6-0 w-150">EMPRESA</th>
-            <th class="th pad-6-0 w-100">DNI</th>
+            <th class="th pad-6-0 w-100">CUIT/CUIL</th>
             <th class="th pad-6-0 w-300">NOMBRE</th>            
             <th class="th pad-6-0 w-130">INSCRIPCIÓN</th>
             <th class="th pad-6-0 w-100">PRECIO</th>
@@ -65,6 +65,7 @@
 
 <!--- popups --->
 <%- include('../../partials/confirmPopup') %>
+<%- include('../../partials/resultsPopups') %>
 
 <!----------SCRIPTS---------->
 <script type="module" src="/js/admin/asyncStudents/asyncStudents.js?v=<%= Date.now() %>"></script>
