--- a/src/views/inscriptions/mainMenu.ejs
+++ b/src/views/inscriptions/mainMenu.ejs
@@ -10,7 +10,9 @@
 <form action="/inscripciones/tipos-de-cursos" method="POST">
     <div class="flex flex-c rg-20 ai-c mt-30">
         <% coursesTypes.forEach(ct => { %>
-            <button type="submit" name="typeButton" value="<%= ct.id %>" class="btn-std fs-16 w-600 max-w-80p pad-17-0"><%= ct.type %></button> 
+            <% if (ct.id != 4) { %> <!---SP unavailable-->
+                <button type="submit" name="typeButton" value="<%= ct.id %>" class="btn-std fs-16 w-600 max-w-80p pad-17-0"><%= ct.type %></button>
+            <% } %>
         <% }) %>
     </div>
 </form>
