--- a/src/views/admin/menu.ejs
+++ b/src/views/admin/menu.ejs
@@ -5,7 +5,7 @@
 
 <div class="flex-c rg-20 ai-c jc-c">
 
-    <a href=""><div class="btn-std fs-15 w-450 pad-12-0 max-w-90p m-a" id="">CURSOS SINCRÓNICOS</div></a>
+    <a href="/administracion/sincronicos/alumnos"><div class="btn-std fs-15 w-450 pad-12-0 max-w-90p m-a" id="">CURSOS SINCRÓNICOS</div></a>
     <a href="/administracion/asincronicos/alumnos"><div class="btn-std fs-15 w-450 pad-12-0 max-w-90p m-a" id="">CURSOS ASINCRÓNICOS</div></a>
     
 </div>
