--- a/src/views/exams/theoricals/login.ejs
+++ b/src/views/exams/theoricals/login.ejs
@@ -5,7 +5,7 @@
 
 <div class="fs-15 mt-15 mb-10 ta-c">Ingrese su CUIT</div>
 
-<form action="/cuestionarios/login" method="POST">
+<form action="/examenes/login" method="POST">
 
     <div class="ta-c">
         <input type="text" name="cuitCuil" id="cuitCuil" class="input-std w-250 max-w-90p pad-12-0" autocomplete="off">
