--- a/src/views/exams/theoricals/pendingTheoricals.ejs
+++ b/src/views/exams/theoricals/pendingTheoricals.ejs
@@ -3,14 +3,14 @@
 
 <div class="fs-19 fw-b mt-25--5 mb-20 ta-c">EXÁMENES TEÓRICOS VIGENTES</div>
 
-<form action="/cuestionarios/set-exam" method="POST">
+<form action="/examenes/set-exam" method="POST">
     <div class="pending-exams">
         <% pendingExams.forEach(exam => { %>
             <div class="pending-exam">
-                <div class="<%= exam.theoricalsEnabled ? 'pending-exam-title-enabled' : 'pending-exam-title-unabled' %>"><%= exam.exam_theorical_data.exam_name.toUpperCase() %></div>
-                <div class="<%= exam.theoricalsEnabled ? 'pending-exam-status-enabled' : 'pending-exam-status-unabled' %>"><%= exam.theoricalsEnabled ? 'HABILITADO' : 'NO HABILITADO' %></div>
+                <div class="<%= exam.theorical_enabled ? 'pending-exam-title-enabled' : 'pending-exam-title-unabled' %>"><%= exam.exam_theorical_data.exam_name.toUpperCase() %></div>
+                <div class="<%= exam.theorical_enabled ? 'pending-exam-status-enabled' : 'pending-exam-status-unabled' %>"><%= exam.theorical_enabled ? 'HABILITADO' : 'NO HABILITADO' %></div>
                 <div class="mt-20_15 fs-14">
-                    ESTADO DEL EXAMEN: <b><i><%= exam.theoricals_status == 'pending' ? 'PENDIENTE' : (exam.theoricals_status == 'in-progress' ? 'EN PROCESO' : 'DESAPROBADO') %></i></b>
+                    ESTADO DEL EXAMEN: <b><i><%= exam.theorical_status == 'pending' ? 'PENDIENTE' : (exam.theorical_status == 'in-progress' ? 'EN PROCESO' : 'DESAPROBADO') %></i></b>
                 </div>
                 <div class="pending-exam-row">
                     <div class="pending-exam-box">
@@ -19,7 +19,7 @@
                         
                     </div>
                     <div class="pending-exam-box">
-                        <div class="<%= exam.attendance == 'complete' ? 'pending-exam-box-title-ok' : 'pending-exam-box-title-pending' %>">CURSADA</div>
+                        <div class="<%= exam.attendance == 'complete' ? 'pending-exam-box-title-ok' : 'pending-exam-box-title-pending' %>">ASISTENCIA</div>
                         <div class="<%= exam.attendance == 'complete' ? 'pending-exam-box-status-ok' : 'pending-exam-box-status-pending' %>"><%- exam.attendance == 'complete' ? '<i class="fa-regular fa-circle-check"></i>' : '<i class="fa-regular fa-circle-xmark"></i>' %></div>
                     </div>
                     <div class="pending-exam-box">
@@ -28,17 +28,15 @@
                     </div>
                 </div>
                 
-                <% if (exam.theoricalsEnabled) { %>
+                <% if (exam.theorical_enabled) { %>
                     <button class="pending-exam-button peb-enabled" type="submit" name="<%= exam.id %>">
-                        <%= exam.theoricals_status == 'in-progress' ? 'CONTINUAR EXAMEN TEÓRICO' : (exam.theoricals_status == 'not-passed' ? 'REHACER EXAMEN TEÓRICO' : 'HACER EXAMEN TEÓRICO') %>
+                        <%= exam.theorical_status == 'in-progress' ? 'CONTINUAR EXAMEN TEÓRICO' : (exam.theorical_status == 'not-passed' ? 'REHACER EXAMEN TEÓRICO' : 'HACER EXAMEN TEÓRICO') %>
                     </button>
                     <% } else { %>
                         <div class="pending-exam-button peb-unabled" type="" name="<%= exam.id %>">
                             HACER EXAMEN TEÓRICO
                         </div>
-                     
                 <% } %>
-
             </div>
         <% }) %>
     </div>
