--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,7 +14,7 @@
                 <% if (locals.studentLogged) { %>
                     <div class="user-logged-under-header">
                         <div class="under-header-name"><%= studentLogged.studentData.name.toUpperCase() %></div>
-                        <a href="/cuestionarios/logout"><i class="fa-solid fa-arrow-right-from-bracket under-header-icon"></i></a>
+                        <a href="/examenes/logout"><i class="fa-solid fa-arrow-right-from-bracket under-header-icon"></i></a>
                     </div>
                 <% } %>
             </div>
