--- a/src/views/exams/theoricals/theoricalAnswers.ejs
+++ b/src/views/exams/theoricals/theoricalAnswers.ejs
@@ -2,7 +2,7 @@
 <%- include('../../partials/header') %>
 
 <div class="fs-19 fw-b mt-30_0 flex-r ai-c jc-c"><%= examName.toUpperCase() %></div>
-<div class="fs-15 mt-15 mb-30 flex-r ai-c jc-c">Tus respuestas:</div>
+<div class="fs-15 mt-15 mb-30 flex-r ai-c jc-c">Tus respuestas</div>
 
 <div class="answers">
 
@@ -38,15 +38,15 @@
 </div>
 
 <!--- buttons -->
-<a href="/cuestionarios/pendientes">
+<a href="/examenes/pendientes">
     <div class="btn-std w-250 m-a pad-10-0 mt-30">Volver al menú</div>
 </a>
 
-<a href="/cuestionarios/rehacer">
+<a href="/examenes/rehacer">
     <div class="btn-std w-250 m-a pad-10-0 mt-15">Rehacer examen</div>
 </a>
 
-<a href="/cuestionarios">
+<a href="/examenes">
     <div class="btn-std w-250 m-a pad-10-0 mt-15 mb-30">Salir</div>
 </a>
 
