--- a/src/views/inscriptions/plSelectCourses.ejs
+++ b/src/views/inscriptions/plSelectCourses.ejs
@@ -10,7 +10,7 @@
 
 <div class="cat-price" id="totalPrice"><b>PRECIO TOTAL: </b> ARS 0.00</div>
 
-<form action="/inscripciones/cursos" method="POST">
+<form action="/inscripciones/<%= branchAlias %>/cursos" method="POST">
 
     <div class="ta-c"><input type="hidden" name="totalPriceInput" id="totalPriceInput"></div>
 
