--- a/src/views/inscriptions/plTypes.ejs
+++ b/src/views/inscriptions/plTypes.ejs
@@ -12,7 +12,7 @@
 
 <div class="mt-20"><%- include('../partials/contactPopup') %></div>
 
-<form action="/inscripciones/licencias-profesionales/tipos" method="POST">
+<form action="/inscripciones/<%= branchAlias %>/licencias-profesionales/tipos" method="POST">
 
     <div class="pl-insc-type">
         <div class="insc-type-title" id="getTitle">
