--- a/public/css/paddings.css
+++ b/public/css/paddings.css
@@ -83,6 +83,16 @@
     padding: 17px 0px
 }
 
+/* padding top */
+.pt-15{
+    padding-top: 15px
+}
+
+/* padding bottom */
+.pb-15{
+    padding-bottom: 15px
+}
+
 
 @media (max-width:730px){
     .pad-17-0{
