--- a/src/views/inscriptions/hmSwornDeclaration.ejs
+++ b/src/views/inscriptions/hmSwornDeclaration.ejs
@@ -10,7 +10,7 @@
     Para inscribirse a la Habilitación de Mercancías Peligrosas debe poseer alguna de las licencias mencionadas abajo
 </div>
 
-<form action="/inscripciones/<%= branchAlias %>/mercancias-peligrosas/declaracion-jurada" method="POST">
+<form action="/inscripciones/<%= branchUrl %>/mercancias-peligrosas/declaracion-jurada" method="POST">
 
     <div class="sd-declarations">
         <div class="sd-declaration max-w-85p" id="divCde">
