--- a/src/views/inscriptions/personalData.ejs
+++ b/src/views/inscriptions/personalData.ejs
@@ -18,7 +18,7 @@
     <div id="errorText"></div>
 </div>
 
-<form action="/inscripciones/<%= branchAlias %>/datos-personales" method="POST">
+<form action="/inscripciones/<%= branchUrl %>/datos-personales" method="POST">
 
     <div class="inputs-column mt-25">
         <div class="div-input w-320 max-w-90p">
